--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <title>CV/RESUME</title>
   <base href="/">
   <!-- Custom Meta Tags -->
-  <meta name="author" content="YOUR NAME" />
+  <meta name="author" content="LAURA MELLO" />
   <meta name="description" content="CV/RESUME"/>
   <meta property="og:title" content="CV/RESUME" />
-  <meta property="og:site_name" content="SITE NAME" />
-  <meta property="og:description" content="SOME DESCRIPTION" />
-  <meta property="og:url" content="https://www.example.com" />
+  <meta property="og:site_name" content="CV" />
+  <meta property="og:description" content="MY CV" />
+  <meta property="og:url" content="https://lauragirdwood.github.io/" />
 
 
   
